add: redis pub/sub

--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 
 services:
-  client:
+  client1:
     build:
       context: ./client
       dockerfile: Dockerfile
@@ -9,13 +9,31 @@ services:
     stdin_open: true
     ports:
       - 3000:5173
+    environment:
+     - VITE_WS_PORT=8080
     volumes:
       - type: bind
         source: "client/src"
         target: "/usr/app/src"
     depends_on:
-      - server
-  server:
+      - server1
+  client_2:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    tty: true
+    stdin_open: true
+    ports:
+      - 3001:5173
+    environment:
+      - VITE_WS_PORT=8081
+    volumes:
+      - type: bind
+        source: "client/src"
+        target: "/usr/app/src"
+    depends_on:
+      - server2
+  server1:
     build:
       context: ./server
       dockerfile: Dockerfile
@@ -27,3 +45,27 @@ services:
       - type: bind
         source: server/src
         target: /go/app/src
+  server2:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    stdin_open: true
+    tty: true
+    ports:
+      - 8081:8080
+    volumes:
+      - type: bind
+        source: server/src
+        target: /go/app/src
+  redis:
+    image: redis:7.0.2
+    command: redis-server --appendonly yes
+    restart: always
+    ports:
+      - 6379:6379
+    volumes:
+      - type: volume
+        source: redis-volume
+        target: /data
+volumes:
+  redis-volume:
